--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta property="og:title" content="like">
-<meta property="og:description" content="relax">
-<meta property="og:image" content="https://psihoman.ru/uploads/posts/2022-01/1643268295_4.jpg">
+  <meta property="og:title" content="Muy buenas noticias para los hombres">
+<meta property="og:description" content="Método comprobado">
+<meta property="og:image" content="https://i.imgur.com/6Deta95.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
